Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62802

symLinkTarget doesn't resolve absolute path for relative symlinks on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9
    • 4.8.x, 5.9.1
    • Core: I/O
    • None
    • ced0f54ec3c79ff4d3e6d8048ce7330d1e19f971

    Description

      cd /d D:\temp
      mklink link ..\path\target
      #include <QDebug>
      #include <QFileInfo>
      
      int main()
      {
          QFileInfo fi("D:/temp/link");
          qDebug() << fi.symLinkTarget(); // ../path/target
          return 0;
      }

      According to the documentation, the path should be absolute.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            orgads Orgad Shaneh
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes