Fix save for relative symbolic links on Windows

Works around QTBUG-62802.

Change-Id: I2edacb6d368e28fa240e7a866692391cf67f0ca2
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Robert Loehning <robert.loehning@qt.io>